change color of login signup button navigation code added in login and signup activity

--- a/grabbit/app/src/main/res/layout/activity_login.xml
+++ b/grabbit/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
             android:drawableLeft="@drawable/user"
             android:hint="Username"
             android:layout_marginTop="50dp"
-            android:textColor="#FFF"
+            android:textColor="#000"
             android:paddingLeft="0dp"
             android:drawablePadding="5dp"
             android:textColorHint="#999"/>
@@ -44,7 +44,7 @@
             android:drawableLeft="@drawable/lock"
             android:hint="Password"
             android:layout_marginTop="10dp"
-            android:textColor="#FFF"
+            android:textColor="#000"
             android:paddingLeft="0dp"
             android:drawablePadding="5dp"
             android:textColorHint="#999"/>
@@ -68,6 +68,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             android:textColor="#000000"
+
             />
 
     </LinearLayout>
