--- a/grabbit/app/src/main/res/drawable-v24/selector_xml_btn_orange.xml
+++ b/grabbit/app/src/main/res/drawable-v24/selector_xml_btn_orange.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="true" >
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <corners android:radius="5dp" />
-            <solid android:color="#FF4500" />
+            <solid android:color="#FFA500" />
         </shape>
     </item>
     <item >
