refine ui on login signup added multiple icon resources added cart and profile activity

--- a/grabbit/app/src/main/res/layout/activity_signup.xml
+++ b/grabbit/app/src/main/res/layout/activity_signup.xml
@@ -27,7 +27,7 @@
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/username"
-            android:drawableLeft="@drawable/user"
+            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
             android:hint="Username"
             android:layout_marginTop="50dp"
             android:textColor="#000"
@@ -41,7 +41,7 @@
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/email"
-            android:drawableLeft="@drawable/lock"
+            android:drawableLeft="@drawable/ic_email_black_24dp"
             android:hint="Email"
             android:layout_marginTop="10dp"
             android:textColor="#000"
@@ -55,7 +55,7 @@
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/password"
-            android:drawableLeft="@drawable/lock"
+            android:drawableLeft="@drawable/ic_lock_black_24dp"
             android:hint="Password"
             android:layout_marginTop="10dp"
             android:textColor="#000"
@@ -69,7 +69,7 @@
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/confirmPassword"
-            android:drawableLeft="@drawable/lock"
+            android:drawableLeft="@drawable/ic_lock_black_24dp"
             android:hint="Confirm Password"
             android:layout_marginTop="10dp"
             android:textColor="#000"
