--- a/grabbit/app/src/main/res/layout/activity_login.xml
+++ b/grabbit/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/username"
-            android:drawableLeft="@drawable/user"
+            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
             android:hint="Username"
             android:layout_marginTop="50dp"
             android:textColor="#000"
@@ -41,7 +41,7 @@
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/password"
-            android:drawableLeft="@drawable/lock"
+            android:drawableLeft="@drawable/ic_lock_black_24dp"
             android:hint="Password"
             android:layout_marginTop="10dp"
             android:textColor="#000"
@@ -53,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="SignIn"
+            android:text="Sign In"
             android:id="@+id/button"
             android:background="@drawable/selector_xml_btn_orange"
             android:layout_gravity="center_horizontal"
