--- a/grabbit/app/src/main/res/layout/activity_login.xml
+++ b/grabbit/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/username"
+            android:id="@+id/edit_text_username"
             android:drawableLeft="@drawable/ic_account_circle_black_24dp"
             android:hint="Username"
             android:layout_marginTop="50dp"
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/password"
+            android:id="@+id/edit_text_password"
             android:drawableLeft="@drawable/ic_lock_black_24dp"
             android:hint="Password"
             android:layout_marginTop="10dp"
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="Sign In"
-            android:id="@+id/button"
+            android:id="@+id/btn_sign_in"
             android:background="@drawable/selector_xml_btn_orange"
             android:layout_gravity="center_horizontal"
             />
