--- a/grabbit/app/src/main/res/layout/activity_signup.xml
+++ b/grabbit/app/src/main/res/layout/activity_signup.xml
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="SignUp"
-            android:id="@+id/button"
+            android:id="@+id/btn_sign_up"
             android:background="@drawable/selector_xml_btn_orange"
             android:layout_gravity="center_horizontal"
             />
