--- a/grabbit/app/src/main/res/layout/activity_signup.xml
+++ b/grabbit/app/src/main/res/layout/activity_signup.xml
@@ -4,89 +4,86 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/login_background"
     tools:context=".login.LoginActivity">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@drawable/login_background"
-        android:padding="40dp">
+        android:padding="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:src="@drawable/logo"
-            android:paddingTop="50dp"
-            />
+            android:layout_height="120dp"
+            android:contentDescription="@string/grabbitlogo"
+            android:src="@drawable/logo" />
 
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:id="@+id/username"
-            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
-            android:hint="Username"
-            android:layout_marginTop="50dp"
-            android:textColor="#000"
-            android:paddingLeft="0dp"
-            android:drawablePadding="5dp"
-            android:textColorHint="#999"/>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/email"
-            android:drawableLeft="@drawable/ic_email_black_24dp"
-            android:hint="Email"
-            android:layout_marginTop="10dp"
-            android:textColor="#000"
-            android:paddingLeft="0dp"
-            android:drawablePadding="5dp"
-            android:textColorHint="#999"/>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/password"
-            android:drawableLeft="@drawable/ic_lock_black_24dp"
-            android:hint="Password"
-            android:layout_marginTop="10dp"
-            android:textColor="#000"
-            android:paddingLeft="0dp"
-            android:drawablePadding="5dp"
-            android:textColorHint="#999"/>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/confirmPassword"
-            android:drawableLeft="@drawable/ic_lock_black_24dp"
-            android:hint="Confirm Password"
-            android:layout_marginTop="10dp"
-            android:textColor="#000"
-            android:paddingLeft="0dp"
-            android:drawablePadding="5dp"
-            android:textColorHint="#999"/>
-
-        <Button
+            android:id="@+id/edit_text_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="SignUp"
-            android:id="@+id/btn_sign_up"
-            android:background="@drawable/selector_xml_btn_orange"
-            android:layout_gravity="center_horizontal"
-            />
+            android:drawableStart="@drawable/ic_account_circle_black_24dp"
+            android:drawablePadding="5dp"
+            android:ems="10"
+            android:hint="@string/username"
+            android:inputType="text"
+            android:textColor="#000"
+            android:textColorHint="#999" />
 
+        <EditText
+            android:id="@+id/edit_text_fullname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:drawableStart="@drawable/ic_account_circle_black_24dp"
+            android:drawablePadding="5dp"
+            android:ems="10"
+            android:hint="@string/full_name"
+            android:inputType="text"
+            android:textColor="#000"
+            android:textColorHint="#999" />
+
+        <EditText
+            android:id="@+id/edit_text_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:drawableStart="@drawable/ic_email_black_24dp"
+            android:drawablePadding="5dp"
+            android:ems="10"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:textColor="#000"
+            android:textColorHint="#999" />
+
+        <EditText
+            android:id="@+id/edit_text_contactno"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:drawableStart="@drawable/ic_phone_black_24dp"
+            android:drawablePadding="5dp"
+            android:ems="10"
+            android:hint="Contact No"
+            android:inputType="textPassword"
+            android:textColor="#000"
+            android:textColorHint="#999" />
+
+        <Button
+            android:id="@+id/btn_sign_up"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/selector_xml_btn_orange"
+            android:text="@string/signup" />
 
 
     </LinearLayout>
