--- a/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
+++ b/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
+    android:layout_height="match_parent">
     <LinearLayout
-        android:id="@+id/CartItemlistid"
+        android:id="@+id/CartItemListId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="@drawable/corner_redius_background"
         app:layout_constraintCircleRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,96 +18,50 @@
 
 
         <ImageView
-            android:layout_width="50dp"
+            android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_margin="10dp"
             android:src="@drawable/coke" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingRight="25dp"
+            android:layout_width="230dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="20dp"
+                android:text="Coke"
+                android:textSize="20sp"/>
+
+            <TextView
+                android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="10dp"
-                android:text="Coke"
-                android:textSize="20sp">
-
-            </TextView>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="Rs"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
-                    android:text="40"
-                    android:textSize="20sp" />
-
-<!--                <ImageView-->
-<!--                    android:layout_width="30dp"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_marginLeft="20dp"-->
-<!--                    android:src="@drawable/ic_add_circle_black_24dp"-->
-<!--                    android:layout_marginTop="10dp"-->
-<!--                    />-->
-<!--                />-->
-
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_marginLeft="10dp"-->
-<!--                    android:layout_marginTop="10dp"-->
-<!--                    android:gravity="center_vertical"-->
-<!--                    android:text="3"-->
-<!--                    android:textSize="20sp" />-->
-
-
-<!--                <ImageView-->
-<!--                    android:layout_width="30dp"-->
-<!--                    android:layout_marginTop="10dp"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_marginLeft="10dp"-->
-<!--                    android:src="@drawable/ic_do_not_disturb_on_black_24dp" />-->
-<!--                />-->
-            </LinearLayout>
-
+                android:text="Rs 40"
+                android:textSize="20sp"/>
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
             <com.google.android.material.button.MaterialButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:text="Remove"
+                android:id="@+id/button"
+                android:layout_width="35dp"
+                android:paddingLeft="5dp"
                 app:cornerRadius="25dp"
+                android:layout_height="wrap_content"
                 app:icon="@drawable/ic_clear_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
-
-            </com.google.android.material.button.MaterialButton>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
