--- a/grabbit/app/src/main/res/layout/fragment_home.xml
+++ b/grabbit/app/src/main/res/layout/fragment_home.xml
@@ -56,6 +56,17 @@
                 android:layout_marginBottom="70dp"
                 />
         </ScrollView>
+
+        <ProgressBar
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
