information activity added small changes on cart and main view

--- a/grabbit/app/src/main/res/drawable/corner_redius_background.xml
+++ b/grabbit/app/src/main/res/drawable/corner_redius_background.xml
@@ -7,7 +7,7 @@
     <!-- we define border color and thick -->
     <stroke
         android:width="3dp"
-        android:color="#BEBEBE" />
+        android:color="#DCDCDC" />
     <corners android:radius="40dp" />
 
 </shape>
