--- a/grabbit/app/src/main/res/layout/itemlist_view_onmain.xml
+++ b/grabbit/app/src/main/res/layout/itemlist_view_onmain.xml
@@ -7,7 +7,10 @@
 
     <LinearLayout
         android:id="@+id/itemlistid"
-        android:layout_margin="5dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginBottom="13dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:background="@drawable/corner_redius_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
