--- a/grabbit/app/src/main/res/layout/itemlist_view_onmain.xml
+++ b/grabbit/app/src/main/res/layout/itemlist_view_onmain.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/shadow_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="5dp"
+        android:padding="15dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
