Refactored car xml height issue

--- a/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
+++ b/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <LinearLayout
         android:id="@+id/CartItemListId"
         android:layout_marginTop="13dp"
         android:layout_marginBottom="13dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
