--- a/grabbit/app/src/main/res/layout/fragment_cart.xml
+++ b/grabbit/app/src/main/res/layout/fragment_cart.xml
@@ -24,7 +24,7 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cart"
+                android:text="@string/appBarCart"
                 android:textColor="@color/white"
                 android:textSize="20sp"/>
 
@@ -38,7 +38,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolbar_home"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/btnCheckout"
             >
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cart_item_listrv"
@@ -56,8 +56,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/checkout"
             app:cornerRadius="25dp"
-            app:layout_constraintStart_toStartOf="parent">
-
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="20dp">
         </com.google.android.material.button.MaterialButton>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
